--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Implementation of some compression, encryption and image processing algorithms.
 Algorithm list:
-* Run lenght encoding plus huffman.
-* RGB<->YUV convertations.
-* Histogram building for some component of image.
+* Run length encoding plus huffman (EncryptionLab1).
+* Hamming code (EncryptionLab2).
+* RGB<->YUV conversions (MultimediaLab1_2).
+* Histogram building for some component of image (MultimediaLab3).
+* Discrete cosine transform (MultimediaLab4).
